[package]
name = "ultrasonic"
version = "0.1.0"
authors = ["Ramses <ram.hdzven@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 's'
overflow-checks = false
panic = "abort"
strip = true  # Automatically strip symbols from the binary.

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43.1"
embedded-svc = "0.27.1"
anyhow = "1.0.82"
toml-cfg = "=0.1.3"
serde_json = "1.0.116"
crossbeam-channel = "0.5"
enumset = "1.1.3"

[build-dependencies]
embuild = "0.31.3"
